Refactor API controller to delegate logic to service layer
Extract API logic from FlowrunnerApiController into FlowrunnerApiService:
- Replace ApplicationContext with ObjectProvider for cleaner dependency injection
- Move handler discovery and mapping to service
- Both /config and /handlers endpoints now delegate to the service
- Add tests for AuthenticationHandler to maintain 100% instruction coverage

Co-Authored-By: Claude Haiku 4.5 <noreply@anthropic.com>